--- a/MP_Lucas_Sanz/MP_Lucas_Sanz/View/frmMain.resx
+++ b/MP_Lucas_Sanz/MP_Lucas_Sanz/View/frmMain.resx
@@ -123,8 +123,17 @@
   <metadata name="FormaPagoBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>291, 17</value>
   </metadata>
+  <metadata name="ClienteBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 56</value>
+  </metadata>
   <metadata name="GrupoBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>484, 17</value>
+  </metadata>
+  <metadata name="datos.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="ProveedorBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>185, 56</value>
   </metadata>
   <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -133,8 +142,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAk
-        CQAAAk1TRnQBSQFMAgEBAgEAAbgBAQG4AQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADy
+        CQAAAk1TRnQBSQFMAgEBAwEAAfgBAgH4AQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -163,19 +172,25 @@
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
         AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wIAD4sCAAEOAdQC7QKz
-        AdQEswLUIQAB/wETAxIB9wXvAQADEgHvAgABDQEAAdQB7AdZAtQvAAERAgAB9AHDAW0B1AFmB1EC1CQA
-        ARkBEQEAAf8BSgF6BAABGQHvAgAB9AHDARIBDgGzCdQkAAEZAREBAAF5AUoBAAF6AgABDgEZAe8CAAH/
-        AeoBDgEAAawI1AGtJAABGQERAQACegEAAXoBeQEAAREBGQHvBgAB/wEAAtQBQwGsAdQBbCYAARkBEQEA
-        AXoBFAEAAXoDAAEZAe8JAAF0ApooAAEZAREBAAHxAXQBegFDAwABGQHvAwACDwHrAwABDwHDAW0B9CgA
-        AQ4JAAFtAgAB9AKXAUkCAAEOAcMBAAHDARwlAAHtAngBkQbzARECeAGRAfQBAAH0AgABTwEAAfIBcwTD
-        AQckAA+LAQAB9AKXAUkBAAGaAXMBAAHDAQABwwGaIwAB9AEADXIJAAG8KQAB7QFyA5gBbQEPBJgBDwH/
-        BwABDgFtAQAEbScAAf8CmAEAAYsCmAFtAe8KAAFtAQADbQHqKgADmAERDgADbSwAARAPAAH/AgAB7SQA
-        AUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQABgBcAA/8DAAHAAQEGAAHAAQEEAAHHAfEBgAEB
-        BAABxAExAYABAQQAAcQBEQGIAQEEAAHEAREByAEDBAABxAERAf8BHwQAAcQBMQHHAQ8EAAHHAfEBggEP
-        BAABgAEAAYQBBwYAAYQBBwYAAcQBBwQAAcABAQH8AQcEAAHwAQcB/AEHBAAB/AEfAf4BBwQAAf8BfwH/
-        AQ8EAAs=
+        AdQEswLUIQAB/wETAxIB9wXvAQADEgHvAgABDQEAAdQB7AdZAtQGAAHsARMFAAHsARMgAAERAgAB9AHD
+        AW0B1AFmB1EC1AYAARQGAAEUFgABGQERAQAB/wFKAXoEAAEZAe8CAAH0AcMBEgEOAbMJ1AUAAf8eAAEZ
+        AREBAAF5AUoBAAF6AgABDgEZAe8CAAH/AeoBDgEAAawI1AGtBQAB6x4AARkBEQEAAnoBAAF6AXkBAAER
+        ARkB7wYAAf8BAALUAUMBrAHUAWwHAAHtAUsDAAGzAQ4CDwENFQABGQERAQABegEUAQABegMAARkB7wkA
+        AXQCmigAARkBEQEAAfEBdAF6AUMDAAEZAe8DAAIPAesDAAEPAcMBbQH0CAACDQEiAVMBAAFSAQABrQNx
+        FQABDgkAAW0CAAH0ApcBSQIAAQ4BwwEAAcMBHAgAAnEBSQEjAgABRQEAAbMBcQEAAf8RAAHtAngBkQbz
+        ARECeAGRAfQBAAH0AgABTwEAAfIBcwTDAQcGAAG8CwABQxEAD4sBAAH0ApcBSQEAAZoBcwEAAcMBAAHD
+        AZoHAANxAUkBAAFHAUYBRwEAASIBWREAAfQBAA1yCQABvAoAAUMEcQR0ARQBWRQAAe0BcgOYAW0BDwSY
+        AQ8B/wcAAQ4BbQEABG0HAAEOAXEBAAFxBHQYAAH/ApgBAAGLApgBbQHvCgABbQEAA20B6ggAAQ4CAAF0
+        AQACdAIAAf8YAAOYAREOAANtLAABEA8AAf8CAAHtJAABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
+        AQEFAAGAFwAD/wMAAcABAQL/BAABwAEBAfkB8wIAAccB8QGAAQEB+QHzAgABxAExAYABAQH3Af8CAAHE
+        AREBiAEBAfcB/wIAAcQBEQHIAQMB8AEBAgABxAERAf8BHwHwAQECAAHEATEBxwEPAfABAQIAAccB8QGC
+        AQ8B8AMAAYABAAGEAQcB4AUAAYQBBwHgBQABxAEHAeABAQIAAcABAQH8AQcB8AEJAgAB8AEHAfwBBwGb
+        AQkCAAH8AR8B/gEHAf8BDwIAAf8BfwH/AQ8C/wIACw==
 </value>
   </data>
+  <metadata name="GrupoBindingSource1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>649, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
