--- a/MP_Lucas_Sanz/MP_Lucas_Sanz/View/frmMain.resx
+++ b/MP_Lucas_Sanz/MP_Lucas_Sanz/View/frmMain.resx
@@ -129,11 +129,17 @@
   <metadata name="GrupoBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>484, 17</value>
   </metadata>
+  <metadata name="ArticuloBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>372, 56</value>
+  </metadata>
   <metadata name="datos.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="ProveedorBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>185, 56</value>
+  </metadata>
+  <metadata name="InventarioBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>545, 56</value>
   </metadata>
   <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -142,9 +148,9 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADy
-        CQAAAk1TRnQBSQFMAgEBAwEAAfgBAgH4AQIBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADO
+        CgAAAk1TRnQBSQFMAgEBBAEAAVABAwFQAQMBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -171,21 +177,25 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wIAD4sCAAEOAdQC7QKz
-        AdQEswLUIQAB/wETAxIB9wXvAQADEgHvAgABDQEAAdQB7AdZAtQGAAHsARMFAAHsARMgAAERAgAB9AHD
-        AW0B1AFmB1EC1AYAARQGAAEUFgABGQERAQAB/wFKAXoEAAEZAe8CAAH0AcMBEgEOAbMJ1AUAAf8eAAEZ
-        AREBAAF5AUoBAAF6AgABDgEZAe8CAAH/AeoBDgEAAawI1AGtBQAB6x4AARkBEQEAAnoBAAF6AXkBAAER
-        ARkB7wYAAf8BAALUAUMBrAHUAWwHAAHtAUsDAAGzAQ4CDwENFQABGQERAQABegEUAQABegMAARkB7wkA
-        AXQCmigAARkBEQEAAfEBdAF6AUMDAAEZAe8DAAIPAesDAAEPAcMBbQH0CAACDQEiAVMBAAFSAQABrQNx
-        FQABDgkAAW0CAAH0ApcBSQIAAQ4BwwEAAcMBHAgAAnEBSQEjAgABRQEAAbMBcQEAAf8RAAHtAngBkQbz
-        ARECeAGRAfQBAAH0AgABTwEAAfIBcwTDAQcGAAG8CwABQxEAD4sBAAH0ApcBSQEAAZoBcwEAAcMBAAHD
-        AZoHAANxAUkBAAFHAUYBRwEAASIBWREAAfQBAA1yCQABvAoAAUMEcQR0ARQBWRQAAe0BcgOYAW0BDwSY
-        AQ8B/wcAAQ4BbQEABG0HAAEOAXEBAAFxBHQYAAH/ApgBAAGLApgBbQHvCgABbQEAA20B6ggAAQ4CAAF0
-        AQACdAIAAf8YAAOYAREOAANtLAABEA8AAf8CAAHtJAABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
-        AQEFAAGAFwAD/wMAAcABAQL/BAABwAEBAfkB8wIAAccB8QGAAQEB+QHzAgABxAExAYABAQH3Af8CAAHE
-        AREBiAEBAfcB/wIAAcQBEQHIAQMB8AEBAgABxAERAf8BHwHwAQECAAHEATEBxwEPAfABAQIAAccB8QGC
-        AQ8B8AMAAYABAAGEAQcB4AUAAYQBBwHgBQABxAEHAeABAQIAAcABAQH8AQcB8AEJAgAB8AEHAfwBBwGb
-        AQkCAAH8AR8B/gEHAf8BDwIAAf8BfwH/AQ8C/wIACw==
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ABgAPiwIA
+        AQ4B1ALtArMB1ASzAtQhAAH/ARMDEgH3Be8BAAMSAe8CAAENAQAB1AHsB1kC1AYAAewBEwUAAewBEwQA
+        AlkCUwNZFQABEQIAAfQBwwFtAdQBZgdRAtQGAAEUBgABFAUAA1kBUwRZAQACsgHsBQABGQERAQAB/wFK
+        AXoEAAEZAe8CAAH0AcMBEgEOAbMJ1AUAAf8NAAFZAXoBAAFTAVkBAAF6AVkBAAHyBwABGQERAQABeQFK
+        AQABegIAAQ4BGQHvAgAB/wHqAQ4BAAGsCNQBrQUAAesVAAFDAfIHAAEZAREBAAJ6AQABegF5AQABEQEZ
+        Ae8GAAH/AQAC1AFDAawB1AFsBwAB7QFLAwABswEOAg8BDQQAAlkCUwHyAgAB9wLyAQ4GAAEZAREBAAF6
+        ARQBAAF6AwABGQHvCQABdAKaFwADWQFTAfIB8QIAAVkBAAENBgABGQERAQAB8QF0AXoBQwMAARkB7wMA
+        Ag8B6wMAAQ8BwwFtAfQIAAINASIBUwEAAVIBAAGtA3EDAAFZAXoBAAFTBPIBBwEAASkBWQEiAfQEAAEO
+        CQABbQIAAfQClwFJAgABDgHDAQABwwEcCAACcQFJASMCAAFFAQABswFxAQAB/wYAAfIBAAHyAwABsgEA
+        AQ8CAAHtAngBkQbzARECeAGRAfQBAAH0AgABTwEAAfIBcwTDAQcGAAG8CwABQwUAAbIB8gEAAvIHAA+L
+        AQAB9AKXAUkBAAGaAXMBAAHDAQABwwGaBwADcQFJAQABRwFGAUcBAAEiAVkGAAGyBvIEAAH0AQANcgkA
+        AbwKAAFDBHEEdAEUAVkHAAGyBvIGAAHtAXIDmAFtAQ8EmAEPAf8HAAEOAW0BAARtBwABDgFxAQABcQR0
+        CQABsgbyCAAB/wKYAQABiwKYAW0B7woAAW0BAANtAeoIAAEOAgABdAEAAnQCAAH/BgABgQGyAQADugKy
+        AewJAAOYAREOAANtHAABbAG6DgABEA8AAf8CAAHtJAABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEA
+        AQEGAAEBFgAD/4MAAcABAQL/AYABHwIAAcABAQH5AfMBgAEfAccB8QGAAQEB+QHzAYABAwHEATEBgAEB
+        AfcB/wGAAQMBxAERAYgBAQH3Af8BgAEDAcQBEQHIAQMB8AEBAYABBwHEAREB/wEfAfABAQGAAQcBxAEx
+        AccBDwHwAQEBgAEAAccB8QGCAQ8B8AEAAYABBQGAAQABhAEHAeABAAH4AQMCAAGEAQcB4AEAAfgBAwIA
+        AcQBBwHgAQEB+AEDAcABAQH8AQcB8AEJAfgBAwHwAQcB/AEHAZsBCQH4AQMB/AEfAf4BBwH/AQ8B/wE/
+        Af8BfwH/AQ8E/ws=
 </value>
   </data>
   <metadata name="GrupoBindingSource1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
