--- a/MP_Lucas_Sanz/MP_Lucas_Sanz/View/frmMain.resx
+++ b/MP_Lucas_Sanz/MP_Lucas_Sanz/View/frmMain.resx
@@ -198,6 +198,27 @@
   <metadata name="stockMovimiento.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="idAlbaran.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="personaAlbaran.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="formaPagoAlbaran.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="fechaAlbaran.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="tipoAlbaran.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="facturaAlbaran.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="verAlbaran.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -205,8 +226,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAg
-        DAAAAk1TRnQBSQFMAgEBBQEAAWgBBwFoAQcBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABg
+        DQAAAk1TRnQBSQFMAgEBBgEAAXgBBwF4AQcBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -234,30 +255,36 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wkAAREB/wKzAf8BEDoA
-        ArMBrQGLArM5AAERAbMBEwLsAW0BszkAAYsGAAGLNAAB8gH/AfIBAAGzAQABDwHsAwABszMAAfIDiwFm
-        AQABQwHvAYsBAAHrAQ4BAAHzMgABDQKLAQABWAEAAbMBAAG8AfABAAGzNAABDwGLAQABWQEAAQ4BswFm
-        ArMBZgGzAe0yAAEQAosBWQHvAwABWQKLAWY0AAFmAYsBQwFZBAABIgEAAos0AAFDAosBWQHwAwABWQEA
-        Aos1AAEOAYsBAAFZAQABFQFLAVIBizcAAQ8CiwEAAlkBDgOLNgAB7AiLOAABBwH/AfACiwIAAUM9AAH0
-        OAAPiwIAAQ4B1ALtArMB1ASzAtQhAAH/ARMDEgH3Be8BAAMSAe8CAAENAQAB1AHsB1kC1AYAAewBEwUA
-        AewBEwQAAlkCUwNZFQABEQIAAfQBwwFtAdQBZgdRAtQGAAEUBgABFAUAA1kBUwRZAQACsgHsBQABGQER
-        AQAB/wFKAXoEAAEZAe8CAAH0AcMBEgEOAbMJ1AUAAf8NAAFZAXoBAAFTAVkBAAF6AVkBAAHyBwABGQER
-        AQABeQFKAQABegIAAQ4BGQHvAgAB/wHqAQ4BAAGsCNQBrQUAAesVAAFDAfIHAAEZAREBAAJ6AQABegF5
-        AQABEQEZAe8GAAH/AQAC1AFDAawB1AFsBwAB7QFLAwABswEOAg8BDQQAAlkCUwHyAgAB9wLyAQ4GAAEZ
-        AREBAAF6ARQBAAF6AwABGQHvCQABdAKaFwADWQFTAfIB8QIAAVkBAAENBgABGQERAQAB8QF0AXoBQwMA
-        ARkB7wMAAg8B6wMAAQ8BwwFtAfQIAAINASIBUwEAAVIBAAGtA3EDAAFZAXoBAAFTBPIBBwEAASkBWQEi
-        AfQEAAEOCQABbQIAAfQClwFJAgABDgHDAQABwwEcCAACcQFJASMCAAFFAQABswFxAQAB/wYAAfIBAAHy
-        AwABsgEAAQ8CAAHtAngBkQbzARECeAGRAfQBAAH0AgABTwEAAfIBcwTDAQcGAAG8CwABQwUAAbIB8gEA
-        AvIHAA+LAQAB9AKXAUkBAAGaAXMBAAHDAQABwwGaBwADcQFJAQABRwFGAUcBAAEiAVkGAAGyBvIEAAH0
-        AQANcgkAAbwKAAFDBHEEdAEUAVkHAAGyBvIGAAHtAXIDmAFtAQ8EmAEPAf8HAAEOAW0BAARtBwABDgFx
-        AQABcQR0CQABsgbyCAAB/wKYAQABiwKYAW0B7woAAW0BAANtAeoIAAEOAgABdAEAAnQCAAH/BgABgQGy
-        AQADugKyAewJAAOYAREOAANtHAABbAG6DgABEA8AAf8CAAHtJAABQgFNAT4HAAE+AwABKAMAAUADAAEg
-        AwABAQEAAQEGAAEBFgAD/wEAAf8BAwYAAf4BAQYAAf4BAQYAAfwBMAYAAeABGAYAAcAHAAHAAQEGAAHA
-        AQEGAAGDAYcGAAKHBgABgwGHBgABwAEPBgABwAEPBgABwAEPBgAB4AFfBgAB/AF/CAABwAEBAv8BgAEf
-        AgABwAEBAfkB8wGAAR8BxwHxAYABAQH5AfMBgAEDAcQBMQGAAQEB9wH/AYABAwHEAREBiAEBAfcB/wGA
-        AQMBxAERAcgBAwHwAQEBgAEHAcQBEQH/AR8B8AEBAYABBwHEATEBxwEPAfABAQGAAQABxwHxAYIBDwHw
-        AQABgAEFAYABAAGEAQcB4AEAAfgBAwIAAYQBBwHgAQAB+AEDAgABxAEHAeABAQH4AQMBwAEBAfwBBwHw
-        AQkB+AEDAfABBwH8AQcBmwEJAfgBAwH8AR8B/gEHAf8BDwH/AT8B/wF/Af8BDwT/Cw==
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wkAAREB/wKzAf8BEAQA
+        AQc1AAKzAa0BiwKzBAAB7wFDBwABEgHqAREpAAERAbMBEwLsAW0BswQAAe8BEQUaAbwBbQFEARIBESkA
+        AYsGAAGLAwAB7wERAW0BKAFKAxoB6wIAARElAAHyAf8B8gEAAbMBAAEPAewDAAGzAwAB7wERAW0BXQFK
+        AW0C6wFtAesBbQERJAAB8gOLAWYBAAFDAe8BiwEAAesBDgEAAfMCAAHvAREIGgFtAREkAAENAosBAAFY
+        AQABswEAAbwB8AEAAbMEAAHvAREIGgFtAREkAAEPAYsBAAFZAQABDgGzAWYCswFmAbMB7QMAAe8BEQEa
+        Ag8BEQHsAxoBbQERIwABEAKLAVkB7wMAAVkCiwFmBQAB7wERAW0BSwFDAXQBRAEcAusBbQERIwABZgGL
+        AUMBWQQAASIBAAKLBQAB7wERAW0BQwEOAUsBRAEcAusBbQERIwABQwKLAVkB8AMAAVkBAAKLBQAB7wER
+        AesBQwEQAUsBAAEcAusBbQERJAABDgGLAQABWQEAARUBSwFSAYsHAAHvARECGgERAe0EGgFtAREkAAEP
+        AosBAAJZAQ4DiwYAAe8BEQIaBAABDgEaAW0BESQAAewIiwcAAe8D6gTzAQAC6gERJQABBwH/AfACiwIA
+        AUMMAAEOAe8BAAEPLQAB9DgAD4sCAAEOAdQC7QKzAdQEswLUIQAB/wETAxIB9wXvAQADEgHvAgABDQEA
+        AdQB7AdZAtQGAAHsARMFAAHsARMEAAJZAlMDWRUAARECAAH0AcMBbQHUAWYHUQLUBgABFAYAARQFAANZ
+        AVMEWQEAArIB7AUAARkBEQEAAf8BSgF6BAABGQHvAgAB9AHDARIBDgGzCdQFAAH/DQABWQF6AQABUwFZ
+        AQABegFZAQAB8gcAARkBEQEAAXkBSgEAAXoCAAEOARkB7wIAAf8B6gEOAQABrAjUAa0FAAHrFQABQwHy
+        BwABGQERAQACegEAAXoBeQEAAREBGQHvBgAB/wEAAtQBQwGsAdQBbAcAAe0BSwMAAbMBDgIPAQ0EAAJZ
+        AlMB8gIAAfcC8gEOBgABGQERAQABegEUAQABegMAARkB7wkAAXQCmhcAA1kBUwHyAfECAAFZAQABDQYA
+        ARkBEQEAAfEBdAF6AUMDAAEZAe8DAAIPAesDAAEPAcMBbQH0CAACDQEiAVMBAAFSAQABrQNxAwABWQF6
+        AQABUwTyAQcBAAEpAVkBIgH0BAABDgkAAW0CAAH0ApcBSQIAAQ4BwwEAAcMBHAgAAnEBSQEjAgABRQEA
+        AbMBcQEAAf8GAAHyAQAB8gMAAbIBAAEPAgAB7QJ4AZEG8wERAngBkQH0AQAB9AIAAU8BAAHyAXMEwwEH
+        BgABvAsAAUMFAAGyAfIBAALyBwAPiwEAAfQClwFJAQABmgFzAQABwwEAAcMBmgcAA3EBSQEAAUcBRgFH
+        AQABIgFZBgABsgbyBAAB9AEADXIJAAG8CgABQwRxBHQBFAFZBwABsgbyBgAB7QFyA5gBbQEPBJgBDwH/
+        BwABDgFtAQAEbQcAAQ4BcQEAAXEEdAkAAbIG8ggAAf8CmAEAAYsCmAFtAe8KAAFtAQADbQHqCAABDgIA
+        AXQBAAJ0AgAB/wYAAYEBsgEAA7oCsgHsCQADmAERDgADbRwAAWwBug4AARAPAAH/AgAB7SQAAUIBTQE+
+        BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/8BAAH/AQMBwAEDBAAB/gEBAcABAwQAAf4BAQHA
+        AQMEAAH8ATABwAEDBAAB4AEYAcABAwQAAcABAAHAAQMEAAHAAQEBwAEDBAABwAEBAcABAwQAAYMBhwHA
+        AQMEAAKHAcABAwQAAYMBhwHAAQMEAAHAAQ8BwAEDBAABwAEPAcABAwQAAcABDwHAAQMEAAHgAV8B/AEf
+        BAAB/AF/Av8GAAHAAQEC/wGAAR8CAAHAAQEB+QHzAYABHwHHAfEBgAEBAfkB8wGAAQMBxAExAYABAQH3
+        Af8BgAEDAcQBEQGIAQEB9wH/AYABAwHEAREByAEDAfABAQGAAQcBxAERAf8BHwHwAQEBgAEHAcQBMQHH
+        AQ8B8AEBAYABAAHHAfEBggEPAfABAAGAAQUBgAEAAYQBBwHgAQAB+AEDAgABhAEHAeABAAH4AQMCAAHE
+        AQcB4AEBAfgBAwHAAQEB/AEHAfABCQH4AQMB8AEHAfwBBwGbAQkB+AEDAfwBHwH+AQcB/wEPAf8BPwH/
+        AX8B/wEPBP8L
 </value>
   </data>
   <metadata name="InventarioBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
