--- a/MP_Lucas_Sanz/MP_Lucas_Sanz/View/frmMain.resx
+++ b/MP_Lucas_Sanz/MP_Lucas_Sanz/View/frmMain.resx
@@ -264,6 +264,18 @@
   <metadata name="verAlbaran.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="idFactura.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="entidadFactura.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="listaAlbaranesFactura.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="estadoFactura.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
@@ -271,8 +283,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABg
-        DQAAAk1TRnQBSQFMAgEBBgEAAQgBCQEIAQkBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABu
+        DgAAAk1TRnQBSQFMAgEBBwEAASABCQEgAQkBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -301,35 +313,39 @@
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
         AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wkAAREB/wKzAf8BEAQA
-        AQc1AAKzAa0BiwKzBAAB7wFDBwABEgHqAREpAAERAbMBEwLsAW0BswQAAe8BEQUaAbwBbQFEARIBESkA
-        AYsGAAGLAwAB7wERAW0BKAFKAxoB6wIAARElAAHyAf8B8gEAAbMBAAEPAewDAAGzAwAB7wERAW0BXQFK
-        AW0C6wFtAesBbQERJAAB8gOLAWYBAAFDAe8BiwEAAesBDgEAAfMCAAHvAREIGgFtAREkAAENAosBAAFY
-        AQABswEAAbwB8AEAAbMEAAHvAREIGgFtAREkAAEPAYsBAAFZAQABDgGzAWYCswFmAbMB7QMAAe8BEQEa
-        Ag8BEQHsAxoBbQERIwABEAKLAVkB7wMAAVkCiwFmBQAB7wERAW0BSwFDAXQBRAEcAusBbQERIwABZgGL
-        AUMBWQQAASIBAAKLBQAB7wERAW0BQwEOAUsBRAEcAusBbQERIwABQwKLAVkB8AMAAVkBAAKLBQAB7wER
-        AesBQwEQAUsBAAEcAusBbQERJAABDgGLAQABWQEAARUBSwFSAYsHAAHvARECGgERAe0EGgFtAREkAAEP
-        AosBAAJZAQ4DiwYAAe8BEQIaBAABDgEaAW0BESQAAewIiwcAAe8D6gTzAQAC6gERJQABBwH/AfACiwIA
-        AUMMAAEOAe8BAAEPLQAB9DgAD4sCAAEOAdQC7QKzAdQEswLUIQAB/wETAxIB9wXvAQADEgHvAgABDQEA
-        AdQB7AdZAtQGAAHsARMFAAHsARMEAAJZAlMDWRUAARECAAH0AcMBbQHUAWYHUQLUBgABFAYAARQFAANZ
-        AVMEWQEAArIB7AUAARkBEQEAAf8BSgF6BAABGQHvAgAB9AHDARIBDgGzCdQFAAH/DQABWQF6AQABUwFZ
-        AQABegFZAQAB8gcAARkBEQEAAXkBSgEAAXoCAAEOARkB7wIAAf8B6gEOAQABrAjUAa0FAAHrFQABQwHy
-        BwABGQERAQACegEAAXoBeQEAAREBGQHvBgAB/wEAAtQBQwGsAdQBbAcAAe0BSwMAAbMBDgIPAQ0EAAJZ
-        AlMB8gIAAfcC8gEOBgABGQERAQABegEUAQABegMAARkB7wkAAXQCmhcAA1kBUwHyAfECAAFZAQABDQYA
-        ARkBEQEAAfEBdAF6AUMDAAEZAe8DAAIPAesDAAEPAcMBbQH0CAACDQEiAVMBAAFSAQABrQNxAwABWQF6
-        AQABUwTyAQcBAAEpAVkBIgH0BAABDgkAAW0CAAH0ApcBSQIAAQ4BwwEAAcMBHAgAAnEBSQEjAgABRQEA
-        AbMBcQEAAf8GAAHyAQAB8gMAAbIBAAEPAgAB7QJ4AZEG8wERAngBkQH0AQAB9AIAAU8BAAHyAXMEwwEH
-        BgABvAsAAUMFAAGyAfIBAALyBwAPiwEAAfQClwFJAQABmgFzAQABwwEAAcMBmgcAA3EBSQEAAUcBRgFH
-        AQABIgFZBgABsgbyBAAB9AEADXIJAAG8CgABQwRxBHQBFAFZBwABsgbyBgAB7QFyA5gBbQEPBJgBDwH/
-        BwABDgFtAQAEbQcAAQ4BcQEAAXEEdAkAAbIG8ggAAf8CmAEAAYsCmAFtAe8KAAFtAQADbQHqCAABDgIA
-        AXQBAAJ0AgAB/wYAAYEBsgEAA7oCsgHsCQADmAERDgADbRwAAWwBug4AARAPAAH/AgAB7SQAAUIBTQE+
-        BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/8BAAH/AQMBwAEDBAAB/gEBAcABAwQAAf4BAQHA
-        AQMEAAH8ATABwAEDBAAB4AEYAcABAwQAAcABAAHAAQMEAAHAAQEBwAEDBAABwAEBAcABAwQAAYMBhwHA
-        AQMEAAKHAcABAwQAAYMBhwHAAQMEAAHAAQ8BwAEDBAABwAEPAcABAwQAAcABDwHAAQMEAAHgAV8B/AEf
-        BAAB/AF/Av8GAAHAAQEC/wGAAR8CAAHAAQEB+QHzAYABHwHHAfEBgAEBAfkB8wGAAQMBxAExAYABAQH3
-        Af8BgAEDAcQBEQGIAQEB9wH/AYABAwHEAREByAEDAfABAQGAAQcBxAERAf8BHwHwAQEBgAEHAcQBMQHH
-        AQ8B8AEBAYABAAHHAfEBggEPAfABAAGAAQUBgAEAAYQBBwHgAQAB+AEDAgABhAEHAeABAAH4AQMCAAHE
-        AQcB4AEBAfgBAwHAAQEB/AEHAfABCQH4AQMB8AEHAfwBBwGbAQkB+AEDAfwBHwH+AQcB/wEPAf8BPwH/
-        AX8B/wEPBP8L
+        AQcQAAEiBzgBIgFPAXEBSQEHGAACswGtAYsCswQAAe8BQwcAARIB6gERBQABIgc4AU8BDgEAAXEBSRcA
+        AREBswETAuwBbQGzBAAB7wERBRoBvAFtAUQBEgERBQABMQY4ATEBcQERAQABTwFJFwABiwYAAYsDAAHv
+        AREBbQEoAUoDGgHrAgABEQIAAe8FAAExBDgCcQFDAQ4BSRMAAfIB/wHyAQABswEAAQ8B7AMAAbMDAAHv
+        AREBbQFdAUoBbQLrAW0B6wFtAREDAAOtAQABhgEpBDgBAAJxAU8BERIAAfIDiwFmAQABQwHvAYsBAAHr
+        AQ4BAAHzAgAB7wERCBoBbQERAwADrQEAAYYBKQQAAjgBMRQAAQ0CiwEAAVgBAAGzAQABvAHwAQABswQA
+        Ae8BEQgaAW0BEQMAAa0BZgGtAQABhgEpBzgUAAEPAYsBAAFZAQABDgGzAWYCswFmAbMB7QMAAe8BEQEa
+        Ag8BEQHsAxoBbQERAwABrQFmAYYBAAGGASkHOBMAARACiwFZAe8DAAFZAosBZgUAAe8BEQFtAUsBQwF0
+        AUQBHALrAW0BEQMAAacDDgGGASkHIhMAAWYBiwFDAVkEAAEiAQACiwUAAe8BEQFtAUMBDgFLAUQBHALr
+        AW0BEQMAARAD6wFmASkHOBMAAUMCiwFZAfADAAFZAQACiwUAAe8BEQHrAUMBEAFLAQABHALrAW0BEQIA
+        ARMEhgFmASoGIgEjFAABDgGLAQABWQEAARUBSwFSAYsHAAHvARECGgERAe0EGgFtAREFAAs4FAABDwKL
+        AQACWQEOA4sGAAHvARECGgQAAQ4BGgFtAREFAAEiBzgCMgEqAf8TAAHsCIsHAAHvA+oE8wEAAuoBEQUA
+        ASIHOAEyASoB/xUAAQcB/wHwAosCAAFDDAABDgHvAQABDwgAASIHOAEqAf8bAAH0GgAB7AcAAf8VAA+L
+        AgABDgHUAu0CswHUBLMC1CEAAf8BEwMSAfcF7wEAAxIB7wIAAQ0BAAHUAewHWQLUBgAB7AETBQAB7AET
+        BAACWQJTA1kVAAERAgAB9AHDAW0B1AFmB1EC1AYAARQGAAEUBQADWQFTBFkBAAKyAewFAAEZAREBAAH/
+        AUoBegQAARkB7wIAAfQBwwESAQ4BswnUBQAB/w0AAVkBegEAAVMBWQEAAXoBWQEAAfIHAAEZAREBAAF5
+        AUoBAAF6AgABDgEZAe8CAAH/AeoBDgEAAawI1AGtBQAB6xUAAUMB8gcAARkBEQEAAnoBAAF6AXkBAAER
+        ARkB7wYAAf8BAALUAUMBrAHUAWwHAAHtAUsDAAGzAQ4CDwENBAACWQJTAfICAAH3AvIBDgYAARkBEQEA
+        AXoBFAEAAXoDAAEZAe8JAAF0ApoXAANZAVMB8gHxAgABWQEAAQ0GAAEZAREBAAHxAXQBegFDAwABGQHv
+        AwACDwHrAwABDwHDAW0B9AgAAg0BIgFTAQABUgEAAa0DcQMAAVkBegEAAVME8gEHAQABKQFZASIB9AQA
+        AQ4JAAFtAgAB9AKXAUkCAAEOAcMBAAHDARwIAAJxAUkBIwIAAUUBAAGzAXEBAAH/BgAB8gEAAfIDAAGy
+        AQABDwIAAe0CeAGRBvMBEQJ4AZEB9AEAAfQCAAFPAQAB8gFzBMMBBwYAAbwLAAFDBQABsgHyAQAC8gcA
+        D4sBAAH0ApcBSQEAAZoBcwEAAcMBAAHDAZoHAANxAUkBAAFHAUYBRwEAASIBWQYAAbIG8gQAAfQBAA1y
+        CQABvAoAAUMEcQR0ARQBWQcAAbIG8gYAAe0BcgOYAW0BDwSYAQ8B/wcAAQ4BbQEABG0HAAEOAXEBAAFx
+        BHQJAAGyBvIIAAH/ApgBAAGLApgBbQHvCgABbQEAA20B6ggAAQ4CAAF0AQACdAIAAf8GAAGBAbIBAAO6
+        ArIB7AkAA5gBEQ4AA20cAAFsAboOAAEQDwAB/wIAAe0kAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEB
+        AQABAQYAAQEWAAP/AQAB/wEDAcABAwHgAwAB/gEBAcABAwHgAwAB/gEBAcABAwHgAwAB/AEwAcABAwQA
+        AeABGAHAAQMEAAHAAQABwAEDAQABAQIAAcABAQHAAQMBAAEBAgABwAEBAcABAwEAAQECAAGDAYcBwAED
+        AQABAQIAAocBwAEDAQABAQIAAYMBhwHAAQMBAAEBAgABwAEPAcABAwHgAQECAAHAAQ8BwAEDAeABAQIA
+        AcABDwHAAQMB4AEDAgAB4AFfAfwBHwHgAQcCAAH8AX8C/wHgAQ8EAAHAAQEC/wGAAR8CAAHAAQEB+QHz
+        AYABHwHHAfEBgAEBAfkB8wGAAQMBxAExAYABAQH3Af8BgAEDAcQBEQGIAQEB9wH/AYABAwHEAREByAED
+        AfABAQGAAQcBxAERAf8BHwHwAQEBgAEHAcQBMQHHAQ8B8AEBAYABAAHHAfEBggEPAfABAAGAAQUBgAEA
+        AYQBBwHgAQAB+AEDAgABhAEHAeABAAH4AQMCAAHEAQcB4AEBAfgBAwHAAQEB/AEHAfABCQH4AQMB8AEH
+        AfwBBwGbAQkB+AEDAfwBHwH+AQcB/wEPAf8BPwH/AX8B/wEPBP8L
 </value>
   </data>
   <metadata name="ProveedorBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
